# wanda

./: .gitignore  demo.py  demo.sh  demo2.py  generation.py  hpc_prune.sh  hpc_prune2.sh  hpc_prune3.sh  hpc_testing.sh  main.py  perplexity.py  plot.py  prompt_functions.py  pyproject.toml  test.npy  ttt.py
generated_output/pseudo_model/: pseudo_context.txt  pseudo_instruction.txt  pseudo_output.txt  pseudo_output_ref.txt
image_classifiers/: main.py
lib/: eval.py  layerwrapper.py  prune.py
refactor/: .gitignore  data_utils.py  model_utils.py  run.py  settings.yaml
refactor/compression/: utils.py  wanda.py
saved_attention/: fulldata_factcc_promptA_full_model.pkl  fulldata_factcc_promptB_full_model.pkl  fulldata_factcc_promptC_full_model.pkl  fulldata_summeval_promptA_full_model.pkl  fulldata_summeval_promptB_full_model.pkl  fulldata_summeval_promptC_full_model.pkl
saved_attention/llama-13b-hf/: fulldata_summeval_promptA_sparsegpt.pkl  fulldata_summeval_promptB_sparsegpt.pkl  fulldata_summeval_promptB_wanda.pkl  fulldata_summeval_promptC_sparsegpt.pkl  fulldata_summeval_promptC_wanda.pkl
saved_attention/llama-7b-hf/: fulldata_factcc_promptA_sparsegpt.pkl  fulldata_factcc_promptA_wanda.pkl  fulldata_factcc_promptB_sparsegpt.pkl  fulldata_factcc_promptB_wanda.pkl  fulldata_factcc_promptC_sparsegpt.pkl  fulldata_summeval_promptA_sparsegpt.pkl  fulldata_summeval_promptB_full_model.pkl  fulldata_summeval_promptB_sparsegpt.pkl  fulldata_summeval_promptC_sparsegpt.pkl  fulldata_summeval_promptC_wanda.pkl
scripts/: llama_7b_hpc.sh
(+4 files in other folders)
