[tool.poetry]
name = "wanda"
version = "0.1.0"
description = ""
authors = ["Gchrysostomou <george1bodom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
transformers = "^4.30.2"
datasets = "^2.14.5"
accelerate = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
